--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "beckend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "@types/express": "^4.17.0",
@@ -12,5 +11,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
