--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,19 @@ services:
       - DB_PATH=http://0.0.0.0:8080
     build:
       context: ./backend
+    volumes:
+      - ./backend/index.js:/src/index.js
     ports:
       - 8888:3000
-  frontend-english-exercises:
-    container_name: frontend-english-exercises
-    environment:
-      - API_URL=http://0.0.0.0:8888
-    build:
-      context: ./frontend
-    ports:
-      - 7777:8080
+#  frontend-english-exercises:
+#    container_name: frontend-english-exercises
+#    environment:
+#      - API_URL=http://0.0.0.0:8888
+#    build:
+#      context: ./frontend
+#    ports:
+#      - 7777:8080
+#  mongoDB:
+#    image: mongo:latest
+#    env_file:
+#      - backend/env/mongo.env
