--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,15 @@ services:
       - ./backend/index.js:/src/index.js
     ports:
       - 8888:3000
-#  frontend-english-exercises:
-#    container_name: frontend-english-exercises
-#    environment:
-#      - API_URL=http://0.0.0.0:8888
-#    build:
-#      context: ./frontend
-#    ports:
-#      - 7777:8080
-#  mongoDB:
-#    image: mongo:latest
-#    env_file:
-#      - backend/env/mongo.env
+  frontend-english-exercises:
+    container_name: frontend-english-exercises
+    environment:
+      - API_URL=http://0.0.0.0:8888
+    build:
+      context: ./frontend
+    ports:
+      - 7777:8080
+  mongoDB:
+    image: mongo:latest
+    env_file:
+      - backend/env/mongo.env
