--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "dependencies": {
     "@types/express": "^4.17.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/mongodb": "^3.3.0"
+  },
   "scripts": {
     "server": "nodemon index.js"
   },
